src/pages/homePage/NavBar.css
.nav-bar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100vw;
    background-color: white;
    overflow: hidden;
    position: fixed;
    top: 0;
    height: 14.4%;
    z-index: 3;
}
.apply {
    background-color:#151D3B;
    color: white; 
    text-align: center;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 10%;
}

.nav{
    display: flex;
    justify-content: space-around;
    position: sticky;
    top: 0;
    z-index: 1;
    overflow: hidden;
}
.content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;

}
.content li{
    cursor: pointer;
    padding: .9rem .9rem .1rem;
}

.content li:hover{
    border-bottom: 2px solid red; 
}

.nav{
      align-items: center;
}
.apply p {
    text-decoration: none;
    color: white;
}

.apply:hover{
    background-color:#D82148;
    color: white;
    transition: ease-in .5s;
}

